[package]
name = "riscv-sbi-rt"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.8.1"
riscv = "0.6"
riscv-sbi = "0.1"
riscv-sbi-rt-macros = { path = "macros", version = "0.1.0" }
